<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/photo1"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="HK Tour App"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/white"/>

    <!-- Username EditText -->

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Username"
        android:inputType="text"
        android:background="@color/white"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@color/white"/>

    <!-- Login Button -->
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:onClick = "Login"
        android:id = "@+id/btnLogin"/>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:onClick="RegisterClick"/>

</LinearLayout>